src/app/app.component.scss
.mat-elevation-z5 {
  min-height:56px;
  max-height:56px;
  top: 0;
  position: fixed;
  z-index: 9;
}

.mat-toolbar{
  height: 7vh;
}

div {
  overflow: inherit;
}

.mat-sidenav-container{
  background-color: lightskyblue;
  min-height: 93vh !important;
}

a{
  text-decoration: none;
  white-space: normal;
}

button{
  min-width: min-content;
}

.icon {
  padding: 0 14px;
}

.spacer {
  flex: 1 1 auto;
}

.container {
  position: fixed;
  margin-top: 56px;
  padding-bottom: 56px;
}

